fixed deficiencies according to mentor's feedback